--- a/index.html
+++ b/index.html
@@ -121,6 +121,15 @@
             <button id="continue-btn" class="btn">Explore World</button>
         </div>
     </div>
+    <script type="importmap">
+        {
+          "imports": {
+            "three": "https://unpkg.com/three@0.158.0/build/three.module.js",
+            "three/addons/": "https://unpkg.com/three@0.158.0/examples/jsm/",
+            "gsap": "https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+          }
+        }
+        </script>
     <script type="module" src="main.js"></script>
 </body>
 </html>
