--- a/index.html
+++ b/index.html
@@ -107,6 +107,14 @@
             background: linear-gradient(135deg, #32cd32, #4169e1);
         }
     </style>
+    <script type="importmap">
+        {
+          "imports": {
+            "three": "https://cdn.jsdelivr.net/npm/three@0.171.0/build/three.module.js",
+            "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.171.0/examples/jsm/"
+          }
+        }
+      </script>
 </head>
 <body>
     <video id="video-background" autoplay loop muted playsinline>
