--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <button id="continue-btn" class="btn">Explore World</button>
         </div>
     </div>
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script type="module" src="main.js"></script>
 </body>
 </html>
